<resources>
    <string name="app_name">AttendanceProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sigup">SigUp</string>
    <string name="email2">email2</string>
</resources>
